--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "swag/order-mail-distributor",
-  "description": "Order mail distributor for Shopware 6",
-  "version": "0.9.0",
+  "description": "Order Mail Distributor for Shopware 6",
+  "version": "1.0.0",
   "type": "shopware-platform-plugin",
   "license": "MIT",
   "authors": [
@@ -26,8 +26,8 @@
   "extra": {
     "shopware-plugin-class": "Swag\\OrderMailDistributor\\SwagOrderMailDistributor",
     "label": {
-      "de-DE": "Bestellungs-Mailverteiler",
-      "en-GB": "Order mail distributor"
+      "de-DE": "Order Mail Distributor",
+      "en-GB": "Order Mail Distributor"
     }
   }
 }
