--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
       }
   ],
   "require": {
-      "shopware/core": "~6.2.0",
+      "shopware/core": "~6.2.0 || 6.2.0-RC1",
       "shopware/administration": "~6.2.0"
   },
   "autoload": {
